# vae-lab-project

./: .gitignore  .gitmodules  arg_parser.py  cli.py  config.yaml  dataset.py  distributions.py  experiment.py  job.csh  main.py  mynotebook.ipynb  pyproject.toml  requirements.txt  run.py  tmpnotebook.ipynb
configs/: vae.yaml
data/: sources_10000_d=2.npy
metrics/: __init__.py  cima.py  mcc.py
metrics/mcc/: __init__.py  mcc.py
metrics/utils/: munkres.py
models/: __init__.py  ima_vae.py  vanilla_vae.py
scripts/: find_best_gamma.sh  find_best_seed.sh  gamma_job.csh  job.csh
